@@ -125,6 +125,7 @@ APRX-APRXC linkage
 	(For a feature in planning...)
 
 
+
 	With introduction of APRX-Cluster (APRXC) mode, multiple APRX
 	instances are used as remote attachments to TNCs, and one central
 	system runs more complicated business logic deciding which messages
